@@ -11,8 +11,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <compile.source>8</compile.source>
-        <compile.target>8</compile.target>
+        <compile.source>22</compile.source>
+        <compile.target>22</compile.target>
 
         <compiler.plugin.version>3.6.0</compiler.plugin.version>
     </properties>
@@ -20,8 +20,21 @@
     <repositories>
         <!-- Bringo repo -->
         <repository>
-            <id>gitlab-maven</id>
-            <url>${GITLAB.URL}</url>
+            <id>gitlab-maven-jss7</id>
+            <url>https://gitlab.bringo.work/api/v4/projects/135/packages/maven</url>
+            <releases>
+                <enabled>true</enabled>
+                <updatePolicy>never</updatePolicy>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
+        </repository>
+
+        <repository>
+            <id>gitlab-maven-message-bus</id>
+            <url>https://gitlab.bringo.work/api/v4/projects/350/packages/maven</url>
             <releases>
                 <enabled>true</enabled>
                 <updatePolicy>never</updatePolicy>
@@ -72,6 +85,19 @@
             <artifactId>reflections</artifactId>
             <version>0.9.11</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.bringo</groupId>
+            <artifactId>messageBus</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.14.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -81,9 +107,10 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${compiler.plugin.version}</version>
                 <configuration>
-                    <source>${compile.source}</source>
-                    <target>${compile.target}</target>
+                    <source>21</source>
+                    <target>21</target>
                     <encoding>${project.build.sourceEncoding}</encoding>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
